2005-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c: set charset to UTF-8. Initialize the
	filename from the image's filename. Don't set From: if the Sender
	entry remains blank. Reordered dialog.

2005-04-20  Michael Natterer  <mitch@gimp.org>

	* app/xcf/xcf-load.c (xcf_load_layer): initialize text_layer_flags
	with 0 so it doesn't contain random garbage if the text layer
	flags in the XCF have default values (are not saved at all). Fixes
	bug #301028. Initialize other stuff too for the sake of sanity.

2005-04-19  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/color.pdb: applied patch from Karine Delvare
	which adds gimp_desaturate_full(). Fixes bug #155507.

	* app/pdb/color_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpcolor_pdb.[ch]: regenerated.

	* libgimp/gimp.def: added the new symbol.

2005-04-19  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-snap.c: bail out early if the coords are
	out-of-image plus a border of the snapping epsilon, and not just
	out-of-image. Fixes bug #169892.

2005-04-18  Manish Singh  <yosh@gimp.org>

	* libgimpwidgets/gimpsizeentry.c: #include gimpwidgets.h for
	gimp_spin_button_new().

	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/metadata/interface.c
	* plug-ins/metadata/xmp-parse.c: 64-bit safety for some of the
	debugging g_prints.

2005-04-18  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/newsprint.c: Redo comment for spot_PSsquare
	and spot_PSdiamonds, since the code was not a derived work in
	the copyright sense. It is a C implementation of the same
	algorithm.

2005-04-18  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/common/newsprint.c: Added comment to clarify the
	copyright notice (bug #301076).

2005-04-18  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_real_colormap_changed):
	invalidate layer previews when the colormap changes. Fixes
	bug #301033.

2005-04-18  Michael Natterer  <mitch@gimp.org>
